Phantom Poke Blog Complete

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="pt-br">
 <head>
   <meta charset="utf-8">
-  <title>PhantomBlog</title>
+  <title>PhantomPokeBlog</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="" href="../favico.ico">
+  <link rel="icon" type="image/x-icon" href="assets/favico.ico">
 </head>
 <body>
   <app-root></app-root>
